--- a/about.css
+++ b/about.css
@@ -82,57 +82,57 @@ body {
     color: rgb(200, 200, 255);
 }
 .mainbox {
-  perspective: 1000px;
+    perspective: 1000px;
+    border: 5px solid #a60808;
+    border-radius: 10%;
 }
 
 .content {
-  width: 300px;
-  height: 300px;
-  margin: auto;
-  position: relative;
-  transform-style: preserve-3d;
-  transition: transform 0.8s;
+    width: 300px;
+    height: 300px;
+    margin: auto;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.8s;
 }
 
 .content:hover {
-  transform: rotateY(180deg);
+    transform: rotateY(180deg);
 }
 
 .front,
 .back {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
 }
 
 .front {
-  transform: rotateY(0deg);
-  background:#00a76fec;
-  text-align: center;
-  font-size: 30px;
-  color:yellow;
+    transform: rotateY(0deg);
+    background: #00a76fec;
+    text-align: center;
+    font-size: 30px;
+    color: yellow;
 }
 
-
 .back {
-  transform: rotateY(180deg);
-  background: #049cf4;
-  text-align:justify;
-  font-size: 20px;
-  color:black;
+    transform: rotateY(180deg);
+    background: #049cf4;
+    text-align: justify;
+    font-size: 20px;
+    color: black;
 }
 
 .mainbox {
-  margin: 20px;
+    margin: 20px;
 }
 
 .front,
 .back {
-  padding: 20px;
-  box-sizing: border-box;
-  border: 1px solid #ccc;
-  
+    padding: 20px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
 }
 
 .p2 {
