--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ label.logo{
   color:white;
   font-size: 35px;
   line-height: 80px;
-  padding: 0 100px;
+  padding: 0 30px;
 }
 
 .nav {
@@ -21,7 +21,16 @@ label.logo{
     width: 100%;
     background: #53a608;
 }
-
+.ul{
+  float: right;
+  text-decoration: none;
+}
+.a1,.a2{
+  text-decoration: none;
+  float: right;
+  display: flex;
+  flex-flow: ;
+}
 .marqueediv {
     border: 1vh solid rgb(172, 244, 251);
     border-radius: 3vh;
