--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 * {
-    margin:0px;
+    margin:0.5vh;
     padding:0px;
     text-align: justify;
     list-style: none;
@@ -20,16 +20,22 @@ label.logo{
     height: 80px;
     width: 100%;
     background: #53a608;
+    
 }
 .ul{
   float: right;
   text-decoration: none;
 }
+nav ul li{
+  display:inline-block;
+  line-height: 80px;
+  margin: 5px;
+}
+nav ul li a{
+  color: white;
+}
 .a1,.a2{
   text-decoration: none;
-  float: right;
-  display: flex;
-  flex-flow: ;
 }
 .marqueediv {
     border: 1vh solid rgb(172, 244, 251);
