--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 * {
-    margin:0.5vh;
-    padding:0px;
+    margin: 0.5vh;
+    padding: 0px;
     text-align: justify;
     list-style: none;
     box-sizing: border-box;
@@ -9,34 +9,38 @@
 body {
     background: rgb(0, 6, 20);
 }
-label.logo{
-  color:white;
-  font-size: 35px;
-  line-height: 80px;
-  padding: 0 30px;
+label.logo {
+    color: white;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 30px;
 }
 
 .nav {
     height: 80px;
     width: 100%;
     background: #53a608;
-    
 }
-.ul{
-  float: right;
-  text-decoration: none;
+.ul {
+    float: right;
+    text-decoration: none;
 }
-nav ul li{
-  display:inline-block;
-  line-height: 80px;
-  margin: 5px;
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 5px;
 }
-nav ul li a{
-  color: white;
+nav ul li a {
+    color: white;
+    align-content: center;
+    font-size: 20px;
 }
-.a1,.a2{
-  text-decoration: none;
+.a1,
+.a2 ,
+.a3{
+    text-decoration: none;
 }
+
 .marqueediv {
     border: 1vh solid rgb(172, 244, 251);
     border-radius: 3vh;
