--- a/index.css
+++ b/index.css
@@ -10,16 +10,19 @@ body {
     background: rgb(0, 6, 20);
 }
 label.logo {
-    color: white;
-    font-size: 35px;
+    color: rgb(0, 6, 20);
+    font-size: 50px;
     line-height: 80px;
     padding: 0 30px;
+    float: left;
 }
 
 .nav {
-    height: 80px;
+    height: 100px;
     width: 100%;
-    background: #53a608;
+    background: #9133ff;
+    border: 5px solid #ff33d8;
+    border-radius: 3vh;
 }
 .ul {
     float: right;
@@ -28,7 +31,7 @@ label.logo {
 nav ul li {
     display: inline-block;
     line-height: 80px;
-    margin: 5px;
+    margin: 10px;
 }
 nav ul li a {
     color: white;
@@ -39,8 +42,17 @@ nav ul li a {
 .a2 ,
 .a3{
     text-decoration: none;
+    font-size: 40px;
 }
+.a3{
+  background: #2d6df4;
+}
+.contact:hover{
 
+}
+.about:hover{
+   background: ;
+}
 .marqueediv {
     border: 1vh solid rgb(172, 244, 251);
     border-radius: 3vh;
