--- a/index.css
+++ b/index.css
@@ -23,7 +23,7 @@ label.logo {
     border: 5px solid #ff33d8;
     border-radius: 3vh;
 }
-.ul {
+.navg {
     float: right;
     text-decoration: none;
 }
