--- a/index.css
+++ b/index.css
@@ -9,48 +9,48 @@
 body {
     background: rgb(0, 6, 20);
 }
-label.logo {
-    color: rgb(0, 6, 20);
-    font-size: 50px;
-    line-height: 80px;
-    padding: 0 30px;
+/* Basic reset for list styles */
+.navbar,
+.navbar-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.nav {
-    height: 100px;
-    width: 100%;
-    background: #9133ff;
-    border: 5px solid #ff33d8;
-    border-radius: 3vh;
+/* Navbar styles */
+.navbar {
+  background-color: #333;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.navg {
-    float: right;
-    text-decoration: none;
+
+.logo {
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
 }
-nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 10px;
+
+/* Navbar item styles */
+.navbar-item {
+  margin-right: 20px;
+  position: relative;
+  float: right;
 }
-nav ul li a {
-    color: white;
-    align-content: center;
-    font-size: 20px;
+
+/* Navbar link styles */
+.navbar-link {
+  text-decoration: none;
+  color: white;
+  transition: color 0.3s ease;
 }
-.a1,
-.a2,
-.a3 {
-    text-decoration: none;
-    font-size: 40px;
+
+/* Hover effect */
+.navbar-item:hover .navbar-link {
+  color: #ffcc00; /* Change to your desired hover color */
 }
-.a3 {
-    background: #2d6df4;
-}
-.contact:hover {
-}
-.about:hover {
-    background:;
-}
+
 .marqueediv {
     border: 1vh solid rgb(172, 244, 251);
     border-radius: 3vh;
