--- a/index.css
+++ b/index.css
@@ -138,6 +138,10 @@ body {
     justify-content: center;
     margin-bottom: 3vh;
 }
+.checkbox{
+  height: 20px;
+  width: 20px;
+}
 
 .adiv1,
 .adiv2 {
@@ -171,6 +175,7 @@ body {
     .p1 {
         font-size: 23px;
     }
+    
 }
 
 @media only screen and (max-width: 653px) {
