--- a/index.css
+++ b/index.css
@@ -138,10 +138,13 @@ body {
     justify-content: center;
     margin-bottom: 3vh;
 }
-.checkbox {
-    height: 500px;
-    width: 500px;
-    align-content: right;
+
+}
+input[type=checkbox] {
+    margin: 4px 0 0;
+   
+    width: 200px;
+    height: 200px;
 }
 
 .adiv1,
