--- a/index.css
+++ b/index.css
@@ -9,6 +9,22 @@ box-sizing: border-box;
 body {
 background: rgb(0, 6, 20);
 }
+.checkbox:checked~.navbar-item{
+opacity: 0;
+}
+.check{
+height: 200px;
+width: 200px;
+display: flex;
+justify-content: flex-start;
+}
+
+input[type=checkbox] {
+margin: 4px 0 0;
+line-height: normal;
+width: 200px;
+height: 200px;
+}
 
 .navbar,
 .navbar-list {
@@ -138,19 +154,6 @@ display: flex;
 justify-content: center;
 margin-bottom: 3vh;
 }
-.check{
-height: 200px;
-width: 200px;
-display: flex;
-justify-content: left;
-}
-
-input[type=checkbox] {
-margin: 4px 0 0;
-line-height: normal;
-width: 200px;
-height: 200px;
-}
 
 .adiv1,
 .adiv2 {
@@ -184,10 +187,8 @@ font-size: 25px;
 .p1 {
 font-size: 23px;
 }
-.checkbox:checked~.navbar-item{
-opacity: 0;
-}
-}
+
+
 
 @media only screen and (max-width: 653px) {
 .title {
